			Java Electric change log

NOTE: Please place changes under the version that will be released next.

************************* Version 8.02c: *********************************

BUG: (01/20/05, DN) Can't rename cell groups (Bug #167).
FIX: CircuitChanges.RenameCellGroup.doIt stores cells from group in
     array before renaming.

IMP: (01/19/05, SMR) Cleaned up use of "getUserNetlist".

IMP: (01/18/05, SMR) Improved GDS floating point output.  Code from Tom Valine <tomv@transmeta.com>.

IMP/MAN: (01/18/05, SMR) Removed "Update" button from "Attributes" dialog, have only "Done".
     All actions happen instantantly (Bug #78).

IMP/MAN: (01/18/05, SMR) "Props." button in "Arc Preferences" dialog by name field lets name info be edited (Bug #149).

BUG: (01/18/05, DN) "ElectricObject.isLinked()" can return true for objects of deleted cell.
FIX: Reimplement "isLinked()" so that it became the same as former "isActuallyLinked()".

IMP: (01/17/05, DN) Deterministic output of ELIB and ReadableDump:
     Only referenced objects and variable keys are written;
     Userbits of objects contain only bits used in Java Electric;
     Only variable flags used in Java Electric are written;
     VTDISPLAYNAMEVALINH and VTDISPLAYNAMEVALINHALL bits in TextDescriptor are replaced by VTDISPLAYNAMEVALUE;

IMP: (01/14/05, RK) NCC: I eliminated the annoying "false sharing" behavior during hierarchical NCC. This allows NCC regressions to pass once again.

IMP: (01/14/05, SMR) Added special properties dialog for nodes with outline information
     (shown when doing a "Properties" command on such a node).

BUG: (01/14/04, DN) Thunder and lightning when highlighted networks are not ready (Bug #155).
FIX: In "Highlighter.getHighlightedNetworks" use "acquireUserNetlist" instead of "getUserNetlist".
     Text message is printed when getUserNetlist is called in GUI thread.

************************* Version 8.02b: *********************************
